se agregan links de los botones del navbar para a las opciones que indican y se termina el proyecto

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <secion class="top-button-bar">
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
-                            <a href="#personal-data" class="btn btn-primary" tabindex="-1" role="button">Datos personales</a>
-                            <a href="#academic-data" class="btn btn-secondary" tabindex="-1" role="button">Datos academicos</a>
-                            <a href="#work-data" class="btn btn-primary" tabindex="-1" role="button">Antecedentes laborales</a>
+                            <a href="#button-personal-data" class="btn btn-primary" tabindex="-1" role="button">Datos personales</a>
+                            <a href="#button-academic-data" class="btn btn-secondary" tabindex="-1" role="button">Datos academicos</a>
+                            <a href="#button-work-data" class="btn btn-primary" tabindex="-1" role="button">Antecedentes laborales</a>
                             <a href="#carouselExampleDark" class="btn btn-secondary" tabindex="-1" role="button">Portafolio</a>
                         </ul>
                     </div>
@@ -72,7 +72,7 @@
         <section>
             <div class="card two">
                 <div class="personal-data">
-                    <h2>Datos personales</h2>
+                    <h2 id="button-personal-data">Datos personales</h2>
                     <ul>
                         <li><b>Nombre:</b> Felipe Jimenez.</li>
                         <li><b>Fecha de nacimiento:</b> 30/04/1990.</li>
@@ -82,7 +82,7 @@
                     </ul>
                 </div>
                 <div class="academic-data">
-                    <h2>Datos academicos</h2>
+                    <h2 id="button-academic-data">Datos academicos</h2>
                     <ul>
                         <li><b>Enseñanza Basica:</b> Completa (1996 - 2003).</li>
                         <li><b>Enseñanza Media:</b> Completa (2004 - 2007).</li>
@@ -90,7 +90,7 @@
                     </ul>
                 </div>
                 <div class="work-data">
-                    <h2>Antecedentes laborales</h2>
+                    <h2 id="button-work-data">Antecedentes laborales</h2>
                     <ul>
                         <li><b>2019 - 2023 : ADT Security Services S.A;</b> Servicio al cliente.
                             Atención de clientes vía Call Center, resolviendo sus problemas e
